Feature: Implement /carparks/nearest endpoint and integration test