@@ -2,17 +2,16 @@ package com.wego.interview.carpark.domain;
 
 import com.wego.interview.carpark.domain.available.AvailableCarPark;
 import com.wego.interview.carpark.domain.available.CarParkQueryService;
-import com.wego.interview.carpark.domain.carpark.CarPark;
-import com.wego.interview.carpark.domain.carpark.CarParkRepository;
-import com.wego.interview.carpark.domain.carpark.CarParkService;
-import com.wego.interview.carpark.domain.carpark.NearestCarParkPage;
+import com.wego.interview.carpark.domain.carpark.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static org.mockito.Mockito.*;
@@ -23,6 +22,8 @@ class CarParkServiceTest {
     private CarParkRepository carParkRepository;
     private CarParkService carParkService;
 
+    private final GeometryFactory geometryFactory = new GeometryFactory();
+
     @BeforeEach
     public void setup() {
         carParkQueryService = mock(CarParkQueryService.class);
@@ -31,27 +32,62 @@ class CarParkServiceTest {
     }
 
     @Test
-    void testFindNearestCarParks() {
+    void testFindNearestCarParks_withPaging() {
         // given
-        AtomicInteger index = new AtomicInteger(1);
         NearestCarParkPage pageRequest = NearestCarParkPage.unpaged();
         Coordinate coordinate = new Coordinate(0, 0);
-        List<String> availableCarParkIds = Arrays.asList("A1", "A2", "A3");
-        List<AvailableCarPark> availableCarParks = availableCarParkIds.stream()
-                        .map(id -> new AvailableCarPark(id, index.get(), index.getAndIncrement()))
-                        .toList();
-        List<CarPark> expectedCarParks = availableCarParks.stream()
-                        .map(availableCarPark -> CarPark.builder().id(availableCarPark.getCarParkId()).build())
-                        .toList();
+        Set<String> availableCarParkIds = Set.of("A1", "A2");
+        List<AvailableCarPark> availableCarParks = List.of(
+                AvailableCarPark.builder()
+                        .carParkId("A1")
+                        .availableLots(1)
+                        .totalLots(1)
+                        .build(),
+                AvailableCarPark.builder()
+                        .carParkId("A2")
+                        .availableLots(2)
+                        .totalLots(2)
+                        .build()
+        );
+        List<CarPark> carParks = List.of(
+                CarPark.builder()
+                        .id("A1")
+                        .location(geometryFactory.createPoint(new Coordinate(1, 1)))
+                        .address("Address 1")
+                        .build(),
+                CarPark.builder()
+                        .id("A2")
+                        .location(geometryFactory.createPoint(new Coordinate(2, 2)))
+                        .address("Address 2")
+                        .build()
+        );
 
         when(carParkQueryService.findAvailableCarParks()).thenReturn(availableCarParks);
-        when(carParkRepository.findNearestCarParksInIds(coordinate, availableCarParkIds, pageRequest)).thenReturn(expectedCarParks);
+        when(carParkRepository.findNearestCarParksInIds(coordinate, availableCarParkIds, pageRequest)).thenReturn(carParks);
 
         // when
-        List<CarPark> result = carParkService.findNearestAvailableCarParks(coordinate, pageRequest);
+        List<NearestCarPark> result = carParkService.findNearestAvailableCarParks(coordinate, pageRequest);
 
         // then
-        Assertions.assertArrayEquals(expectedCarParks.toArray(), result.toArray());
+        Assertions.assertArrayEquals(
+                List.of(
+                        NearestCarPark.builder()
+                                .availableLots(1)
+                                .totalLots(1)
+                                .longitude(1)
+                                .latitude(1)
+                                .address("Address 1")
+                                .build(),
+                        NearestCarPark.builder()
+                                .availableLots(2)
+                                .totalLots(2)
+                                .longitude(2)
+                                .latitude(2)
+                                .address("Address 2")
+                                .build()
+                ).toArray(),
+                result.toArray()
+        );
     }
 
     @Test
@@ -59,7 +95,7 @@ class CarParkServiceTest {
         //given
         AtomicInteger index = new AtomicInteger(1);
         Coordinate coordinate = new Coordinate(0, 0);
-        List<String> availableCarParkIds = Arrays.asList("A1", "A2", "A3", "A4", "A5", "A5", "A7", "A8", "A9", "A10", "A11");
+        Set<String> availableCarParkIds = Set.of("A1", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9", "A10", "A11");
         List<AvailableCarPark> availableCarParks = availableCarParkIds.stream()
                 .map(id -> new AvailableCarPark(id, index.get(), index.getAndIncrement()))
                 .toList();
@@ -67,7 +103,7 @@ class CarParkServiceTest {
         when(carParkQueryService.findAvailableCarParks()).thenReturn(availableCarParks);
 
         // when
-        carParkService.findNearestAvailableCarParks(coordinate, null);
+        carParkService.findNearestAvailableCarParks(coordinate);
 
         // then
         verify(carParkRepository).findNearestCarParksInIds(
